// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CamelOnExceptionVisualEntity > getNodeInteraction > should return the correct interaction for the '{ primaryNodeId: { name: 'from', catalogKind: 'entity' } }' processor 1`] = `
{
  "canBeDisabled": false,
  "canHaveChildren": true,
  "canHaveNextStep": false,
  "canHavePreviousStep": false,
  "canHaveSpecialChildren": false,
  "canRemoveFlow": false,
  "canRemoveStep": true,
  "canReplaceStep": true,
}
`;

exports[`CamelOnExceptionVisualEntity > getNodeInteraction > should return the correct interaction for the '{ primaryNodeId: { name: 'intercept', catalogKind: 'entity' } }' processor 1`] = `
{
  "canBeDisabled": false,
  "canHaveChildren": true,
  "canHaveNextStep": false,
  "canHavePreviousStep": false,
  "canHaveSpecialChildren": false,
  "canRemoveFlow": false,
  "canRemoveStep": true,
  "canReplaceStep": true,
}
`;

exports[`CamelOnExceptionVisualEntity > getNodeInteraction > should return the correct interaction for the '{ primaryNodeId: { name: 'interceptFrom', catalogKind: 'entity' } }' processor 1`] = `
{
  "canBeDisabled": false,
  "canHaveChildren": true,
  "canHaveNextStep": false,
  "canHavePreviousStep": false,
  "canHaveSpecialChildren": false,
  "canRemoveFlow": false,
  "canRemoveStep": true,
  "canReplaceStep": true,
}
`;

exports[`CamelOnExceptionVisualEntity > getNodeInteraction > should return the correct interaction for the '{ primaryNodeId: { name: 'interceptSendToEndpoint', catalogKind: 'entity' } }' processor 1`] = `
{
  "canBeDisabled": false,
  "canHaveChildren": true,
  "canHaveNextStep": false,
  "canHavePreviousStep": false,
  "canHaveSpecialChildren": false,
  "canRemoveFlow": false,
  "canRemoveStep": true,
  "canReplaceStep": true,
}
`;

exports[`CamelOnExceptionVisualEntity > getNodeInteraction > should return the correct interaction for the '{ primaryNodeId: { name: 'log', catalogKind: 'pattern' } }' processor 1`] = `
{
  "canBeDisabled": false,
  "canHaveChildren": false,
  "canHaveNextStep": true,
  "canHavePreviousStep": true,
  "canHaveSpecialChildren": false,
  "canRemoveFlow": false,
  "canRemoveStep": true,
  "canReplaceStep": true,
}
`;

exports[`CamelOnExceptionVisualEntity > getNodeInteraction > should return the correct interaction for the '{ primaryNodeId: { name: 'onCompletion', catalogKind: 'entity' } }' processor 1`] = `
{
  "canBeDisabled": false,
  "canHaveChildren": true,
  "canHaveNextStep": false,
  "canHavePreviousStep": false,
  "canHaveSpecialChildren": false,
  "canRemoveFlow": false,
  "canRemoveStep": true,
  "canReplaceStep": true,
}
`;

exports[`CamelOnExceptionVisualEntity > getNodeInteraction > should return the correct interaction for the '{ primaryNodeId: { name: 'onException', catalogKind: 'entity' } }' processor 1`] = `
{
  "canBeDisabled": false,
  "canHaveChildren": true,
  "canHaveNextStep": false,
  "canHavePreviousStep": false,
  "canHaveSpecialChildren": false,
  "canRemoveFlow": false,
  "canRemoveStep": true,
  "canReplaceStep": true,
}
`;

exports[`CamelOnExceptionVisualEntity > getNodeInteraction > should return the correct interaction for the '{ primaryNodeId: { name: 'route', catalogKind: 'entity' } }' processor 1`] = `
{
  "canBeDisabled": false,
  "canHaveChildren": false,
  "canHaveNextStep": false,
  "canHavePreviousStep": false,
  "canHaveSpecialChildren": false,
  "canRemoveFlow": false,
  "canRemoveStep": true,
  "canReplaceStep": true,
}
`;

exports[`CamelOnExceptionVisualEntity > getNodeInteraction > should return the correct interaction for the '{ primaryNodeId: { name: 'to', catalogKind: 'pattern' } }' processor 1`] = `
{
  "canBeDisabled": false,
  "canHaveChildren": false,
  "canHaveNextStep": true,
  "canHavePreviousStep": true,
  "canHaveSpecialChildren": false,
  "canRemoveFlow": false,
  "canRemoveStep": true,
  "canReplaceStep": true,
}
`;
